--- a/Codigo/PaginaC.css
+++ b/Codigo/PaginaC.css
@@ -25,7 +25,7 @@ footer {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    margin-top: 60px; /* Ajusta el espacio para el footer */
+    margin-top: 60px;
 }
 
 .rectangulo {
@@ -39,8 +39,58 @@ footer {
 
 .rojo {
     background-color: white;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    position: relative;
 }
 
 .negro {
     background-color: rgb(34, 32, 32);
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.cuadrado {
+    text-align: center;
+    line-height: 100px;
+    font-size: 1em;
+}
+
+.ver-notas {
+    width: 150px;
+    height: 100px;
+    background-color: #ddd;
+    border: 1px solid #ccc;
+    margin-right: 40px;
+}
+
+.boletin {
+    width: 1000px;
+    height: 200px;
+    background-color: #ddd;
+    border: 1px solid #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+}
+
+.inferior {
+    width: 500px;
+    height: 150px;
+    background-color: #aaa;
+    border: 1px solid #999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cuadrado p {
+    margin: 0;
+    color: black;
+    font-size: 1em;
 }
